--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Combos</string>
     <string name="action_settings">Settings</string>
     <string name="homepage_title" translatable="false">COMBO SAMPLER</string>
+    <string name="homepage_subtitle" translatable="false">TEKKEN 7</string>
     <string name="homepage_button_1">NEW COMBO</string>
     <string name="homepage_button_2">MY COMBOS</string>
     <string name="newcombo_tab_left">Arrows</string>
